[package]
name = "prices"
version = "0.1.0"
edition = "2021"

[dependencies]
stablebond-sdk = { version = "2.0.21", features = ["sdk", "serde"] }
solana-sdk = ">=1.17.26, <2.0.0"
solana-account-decoder = ">=1.17.26, <2.0.0"
solana-client = ">=1.17.26, <2.0.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.72"
switchboard-on-demand = "=0.1.15"
bytemuck = "1.10.0"
spl-token-2022 = { version = "^1.0.0" }
rust_decimal = "1.30.0"
